<?xml version="1.0" encoding="utf-8"?>

<!--to allow using of data binding we wrap the screen in layout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.login.LogInFragment">

    <!--easier organization of the screen-->
    <!--to make the screen more concise and organize with other screens-->
    <!--and allow the app to work normally in portrait mode-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/email_textView"
            style="@style/login_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_margin"
            android:text="@string/email_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05" />

        <TextView
            android:id="@+id/password_textView"
            style="@style/login_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:text="@string/password_text"
            app:layout_constraintStart_toStartOf="@+id/email_textEdit"
            app:layout_constraintTop_toBottomOf="@+id/email_textEdit" />

        <EditText
            android:id="@+id/email_textEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:ems="10"
            android:hint="@string/your_email_text"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email_textView"
            app:layout_constraintTop_toBottomOf="@+id/email_textView" />

        <EditText
            android:id="@+id/password_textEdit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:hint="@string/your_password_text"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/password_textView"
            app:layout_constraintTop_toBottomOf="@+id/password_textView" />

        <Button
            android:id="@+id/login_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/login_button_spacing"
            android:text="@string/log_in_text"
            android:textColor="@android:color/white"
            android:theme="@style/login_button_style"
            app:layout_constraintBaseline_toBaselineOf="@+id/signup_button"
            app:layout_constraintEnd_toStartOf="@+id/signup_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signup_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up_text"
            android:theme="@style/signup_button_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/password_textEdit"
            app:layout_constraintVertical_bias="0.8" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
