<?xml version="1.0" encoding="utf-8"?>

<!--to allow using of data binding we wrap the screen in layout-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.instructions.InstructionsFragment">

    <!--easier organization of the screen-->
    <!--to make the screen more concise and organize with other screens-->
    <!--and allow the app to work normally in portrait mode-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/instructions_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/intrutionsTitle_textView"
            style="@style/welcomeTitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/instructionsTitle_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/instruciton1_textView"
            style="@style/normalText_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:text="@string/instruction1_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/intrutionsTitle_textView"
            app:layout_constraintTop_toBottomOf="@+id/intrutionsTitle_textView" />

        <TextView
            android:id="@+id/instruction2_textView"
            style="@style/normalText_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/main_margin"
            android:layout_marginEnd="@dimen/main_margin"
            android:text="@string/instruction2_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/instruciton1_textView"
            app:layout_constraintTop_toBottomOf="@+id/instruciton1_textView" />

        <Button
            android:id="@+id/showList_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:text="@string/show_shoe_list_text"
            android:theme="@style/login_button_style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction2_textView"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
